--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.0", features = ["cargo"] }
+swc_atoms = "0.6.4"
 swc_common = { version = "0.33.0", features = ["tty-emitter", "sourcemap"] }
 swc_ecma_ast = "0.110.0"
 swc_ecma_parser = { version = "0.141.3", features = ["typescript"] }
 swc_ecma_visit = "0.96.9"
-walkdir = "2.3.3"
